test coverage improved