@@ -3,6 +3,7 @@ package uk.gov.hmcts.ethos.replacement.docmosis.service;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.jetbrains.annotations.NotNull;
 import org.joda.time.LocalDateTime;
+import org.jspecify.annotations.NonNull;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -27,6 +28,7 @@ import uk.gov.hmcts.et.common.model.ccd.items.DocumentTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.items.HearingTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.items.JurCodesTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.items.ReferralTypeItem;
+import uk.gov.hmcts.et.common.model.ccd.items.RepresentedTypeRItem;
 import uk.gov.hmcts.et.common.model.ccd.items.RespondentSumTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.types.ClaimantHearingPreference;
 import uk.gov.hmcts.et.common.model.ccd.types.DateListedType;
@@ -34,6 +36,7 @@ import uk.gov.hmcts.et.common.model.ccd.types.DocumentType;
 import uk.gov.hmcts.et.common.model.ccd.types.Et3VettingType;
 import uk.gov.hmcts.et.common.model.ccd.types.HearingType;
 import uk.gov.hmcts.et.common.model.ccd.types.JurCodesType;
+import uk.gov.hmcts.et.common.model.ccd.types.RepresentedTypeR;
 import uk.gov.hmcts.et.common.model.ccd.types.RespondentSumType;
 import uk.gov.hmcts.et.common.model.ccd.types.UploadedDocumentType;
 import uk.gov.hmcts.ethos.replacement.docmosis.utils.InternalException;
@@ -44,6 +47,7 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
@@ -60,6 +64,8 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doCallRealMethod;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.ENGLANDWALES_CASE_TYPE_ID;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.NO;
@@ -102,47 +108,47 @@ class InitialConsiderationServiceTest {
     private static final String GIVE_DETAILS = "Give Details:";
 
     private static final String EXPECTED_HEARING_DETAILS_STRING = """
-        |Hearing details | |
-        |-------------|:------------|
-        |Date | 16 May 2022|
-        |Type | Hearing|
-        |Duration | 60 Days|
-        """;
+            |Hearing details | |
+            |-------------|:------------|
+            |Date | 16 May 2022|
+            |Type | Hearing|
+            |Duration | 60 Days|
+            """;
 
     private static final String EXPECTED_BLANK_HEARING_DETAILS = """
-       <br/>
-       <table>
-       <thead>
-       <tr>
-       <th colspan="2"><h2>Listed Hearing Details</h2></th>
-       </tr>
-       <tr>
-       <th width="30%">Aspect</th>
-       <th width="70%">Detail</th>
-       </tr>
-       <thead>
-       <tbody>
-          <tr>
-              <td>Date</td> <td> - </td>
-          </tr>
-          <tr>
-              <td>Type</td> <td> - </td>
-          </tr>
-          <tr>
-              <td>Duration</td> <td> - </td>
-          </tr>
-          <tr>
-              <td>Hearing format</td> <td> - </td>
-          </tr>
-          <tr>
-              <td>Panel Type</td> <td> - </td>
-          </tr>
-          <tr>
-              <td>Venue</td> <td> - </td>
-          </tr>
-      </tbody>
-      </table>
-        """;
+             <br/>
+             <table>
+             <thead>
+             <tr>
+             <th colspan="2"><h2>Listed Hearing Details</h2></th>
+             </tr>
+             <tr>
+             <th width="30%">Aspect</th>
+             <th width="70%">Detail</th>
+             </tr>
+             <thead>
+             <tbody>
+                <tr>
+                    <td>Date</td> <td> - </td>
+                </tr>
+                <tr>
+                    <td>Type</td> <td> - </td>
+                </tr>
+                <tr>
+                    <td>Duration</td> <td> - </td>
+                </tr>
+                <tr>
+                    <td>Hearing format</td> <td> - </td>
+                </tr>
+                <tr>
+                    <td>Panel Type</td> <td> - </td>
+                </tr>
+                <tr>
+                    <td>Venue</td> <td> - </td>
+                </tr>
+            </tbody>
+            </table>
+            """;
 
     private static final String EXPECTED_JURISDICTION_HTML = "<h2>Jurisdiction codes</h2><a "
             + "target=\"_blank\" href=\"https://judiciary.sharepoint.com/sites/empjudgesew/Shared%20Documents/Forms/"
@@ -156,14 +162,19 @@ class InitialConsiderationServiceTest {
             + "grounds of sex, marriage and civil partnership";
 
     private static final String EXPECTED_JURISDICTION_SCOTLAND_HTML = "<h2>Jurisdiction codes</h2><a "
-        + "target=\"_blank\" href=\"https://judiciary.sharepoint"
-        + ".com/:w:/r/sites/ScotlandEJs/Shared%20Documents/Jurisdictional%20Codes%20List"
-        + "/Jurisdiction%20list%20July%202024%20.doc?d=wfa6ba431b0b941ffa0b82504fd093af0&csf=1&web=1&e=Dm6Hda\">"
-        + "View all jurisdiction codes and descriptors (opens in new tab)"
-        + "</a><br><br><h4>DAG</h4>Discrimination, including harassment or discrimination "
-        + "based on association or perception on grounds of age<h4>SXD</h4>"
-        + "Discrimination, including indirect discrimination, discrimination based on association or perception, "
-        + "or harassment on grounds of sex, marriage and civil partnership";
+            + "target=\"_blank\" href=\"https://judiciary.sharepoint"
+            + ".com/:w:/r/sites/ScotlandEJs/Shared%20Documents/Jurisdictional%20Codes%20List"
+            + "/Jurisdiction%20list%20July%202024%20.doc?d=wfa6ba431b0b941ffa0b82504fd093af0&csf=1&web=1&e=Dm6Hda\">"
+            + "View all jurisdiction codes and descriptors (opens in new tab)"
+            + "</a><br><br><h4>DAG</h4>Discrimination, including harassment or discrimination "
+            + "based on association or perception on grounds of age<h4>SXD</h4>"
+            + "Discrimination, including indirect discrimination, discrimination based on association or perception, "
+            + "or harassment on grounds of sex, marriage and civil partnership";
+    public static final String PARTIES_HEARING_FORMAT = """
+            %s
+            %s
+            
+            """;
 
     private CaseData caseDataEmpty;
     private CaseData caseData;
@@ -254,26 +265,26 @@ class InitialConsiderationServiceTest {
         respondent.getValue().setRespondentHearingPanelPreferenceReason("I deserve it");
 
         String expectedOutput = """
-            <table>
-            <thead>
-            <tr>
-            <th colspan="3"><h2>Respondents' Panel Preferences</h2></th>
-            </tr>
-            <tr>
-            <th width="25%">Respondent</th>
-            <th width="25%">Preference</th>
-            <th>Reason</th>
-            </tr>
-            <thead>
-            <tbody>
-              <tr>
-                <td>Test Response</td>
-                <td>judge</td>
-                <td>I deserve it</td>
-              </tr>
-            </tbody>
-            </table>
-            """;
+                <table>
+                <thead>
+                <tr>
+                <th colspan="3"><h2>Respondents' Panel Preferences</h2></th>
+                </tr>
+                <tr>
+                <th width="25%">Respondent</th>
+                <th width="25%">Preference</th>
+                <th>Reason</th>
+                </tr>
+                <thead>
+                <tbody>
+                  <tr>
+                    <td>Test Response</td>
+                    <td>judge</td>
+                    <td>I deserve it</td>
+                  </tr>
+                </tbody>
+                </table>
+                """;
         String hearingPanelPreferenceDetails = initialConsiderationService.getIcRespondentHearingPanelPreference(
                 List.of(respondent));
         assertThat(hearingPanelPreferenceDetails).isEqualTo(expectedOutput);
@@ -285,26 +296,26 @@ class InitialConsiderationServiceTest {
         respondent.setValue(new RespondentSumType());
 
         String expectedOutput = """
-           <table>
-           <thead>
-           <tr>
-           <th colspan="3"><h2>Respondents' Panel Preferences</h2></th>
-           </tr>
-           <tr>
-           <th width="25%">Respondent</th>
-           <th width="25%">Preference</th>
-           <th>Reason</th>
-           </tr>
-           <thead>
-           <tbody>
-             <tr>
-               <td>-</td>
-               <td>-</td>
-               <td>-</td>
-             </tr>
-           </tbody>
-           </table>
-            """;
+                <table>
+                <thead>
+                <tr>
+                <th colspan="3"><h2>Respondents' Panel Preferences</h2></th>
+                </tr>
+                <tr>
+                <th width="25%">Respondent</th>
+                <th width="25%">Preference</th>
+                <th>Reason</th>
+                </tr>
+                <thead>
+                <tbody>
+                  <tr>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                  </tr>
+                </tbody>
+                </table>
+                """;
         String hearingPanelPreferenceDetails = initialConsiderationService.getIcRespondentHearingPanelPreference(
                 List.of(respondent));
         assertThat(hearingPanelPreferenceDetails).isEqualTo(expectedOutput);
@@ -328,31 +339,31 @@ class InitialConsiderationServiceTest {
                 List.of(respondent1, respondent2));
         assertThat(hearingPanelPreferenceDetails).isEqualTo(
                 """
-                <table>
-                <thead>
-                <tr>
-                <th colspan="3"><h2>Respondents' Panel Preferences</h2></th>
-                </tr>
-                <tr>
-                <th width="25%">Respondent</th>
-                <th width="25%">Preference</th>
-                <th>Reason</th>
-                </tr>
-                <thead>
-                <tbody>
-                  <tr>
-                    <td>Respondent1</td>
-                    <td>judge</td>
-                    <td>I deserve it</td>
-                  </tr>
-                  <tr>
-                    <td>Respondent2</td>
-                    <td>panel</td>
-                    <td>Fair trial</td>
-                  </tr>
-                </tbody>
-                </table>
-                """
+                        <table>
+                        <thead>
+                        <tr>
+                        <th colspan="3"><h2>Respondents' Panel Preferences</h2></th>
+                        </tr>
+                        <tr>
+                        <th width="25%">Respondent</th>
+                        <th width="25%">Preference</th>
+                        <th>Reason</th>
+                        </tr>
+                        <thead>
+                        <tbody>
+                          <tr>
+                            <td>Respondent1</td>
+                            <td>judge</td>
+                            <td>I deserve it</td>
+                          </tr>
+                          <tr>
+                            <td>Respondent2</td>
+                            <td>panel</td>
+                            <td>Fair trial</td>
+                          </tr>
+                        </tbody>
+                        </table>
+                        """
         );
     }
 
@@ -480,33 +491,33 @@ class InitialConsiderationServiceTest {
         caseDataWithNoRespondents.setRespondentCollection(null);
         String result = initialConsiderationService.setRespondentDetails(caseDataWithNoRespondents);
         String expected = """
-            <br/>
-            <table>
-              <thead>
-                <tr>
-                    <th colspan="3"><h2>Respondent Name Details</h2></th>
-                </tr>
-                <tr>
-                  <th width="25%">Respondent</th>
-                  <th width="25%">Name given in ET1</th>
-                  <th>Name given in ET3</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Respondent </td>
-                  <td>  </td>
-                  <td>  </td>
-                </tr>
-            </tbody>
-            </table>
-            """;
+                <br/>
+                <table>
+                  <thead>
+                    <tr>
+                        <th colspan="3"><h2>Respondent Name Details</h2></th>
+                    </tr>
+                    <tr>
+                      <th width="25%">Respondent</th>
+                      <th width="25%">Name given in ET1</th>
+                      <th>Name given in ET3</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Respondent </td>
+                      <td>  </td>
+                      <td>  </td>
+                    </tr>
+                </tbody>
+                </table>
+                """;
         assertThat(result).isEqualTo(expected);
     }
 
     private void setFutureHearingDate(CaseData caseData) {
         DateListedType dateListed = caseData.getHearingCollection().getFirst().getValue().getHearingDateCollection()
-            .getFirst().getValue();
+                .getFirst().getValue();
         dateListed.setHearingStatus("Listed");
         dateListed.setListedDate(EARLIEST_FUTURE_HEARING_DATE.toString());
         dateListed.setHearingTimingDuration("3.5 Hours");
@@ -514,7 +525,7 @@ class InitialConsiderationServiceTest {
 
     private void setFutureHearingDateWithSettledHearing(CaseData caseData) {
         DateListedType dateListed = caseData.getHearingCollection().getFirst().getValue().getHearingDateCollection()
-            .getFirst().getValue();
+                .getFirst().getValue();
         dateListed.setHearingStatus("Settled");
         dateListed.setListedDate(EARLIEST_FUTURE_HEARING_DATE.toString());
         dateListed.setHearingTimingDuration("3.5 Hours");
@@ -549,24 +560,24 @@ class InitialConsiderationServiceTest {
     void getEarliestHearingDate() {
         setFutureHearingDate(caseData);
         assertThat(initialConsiderationService.getEarliestHearingDateForListedHearings(generateHearingDates()))
-            .isEqualTo(Optional.of(LocalDate.of(EARLIEST_FUTURE_HEARING_DATE.getYear(),
-                EARLIEST_FUTURE_HEARING_DATE.getMonthOfYear(),
-                EARLIEST_FUTURE_HEARING_DATE.getDayOfMonth())));
+                .isEqualTo(Optional.of(LocalDate.of(EARLIEST_FUTURE_HEARING_DATE.getYear(),
+                        EARLIEST_FUTURE_HEARING_DATE.getMonthOfYear(),
+                        EARLIEST_FUTURE_HEARING_DATE.getDayOfMonth())));
     }
 
     @Test
     void getEarliestHearingDateWithEmptyDateListedTypeItem() {
         setFutureHearingDate(caseData);
         assertThat(initialConsiderationService.getEarliestHearingDateForListedHearings(generateHearingDatesWithEmpty()))
-            .isEqualTo(Optional.of(LocalDate.of(EARLIEST_FUTURE_HEARING_DATE.getYear(),
-                EARLIEST_FUTURE_HEARING_DATE.getMonthOfYear(),
-                EARLIEST_FUTURE_HEARING_DATE.getDayOfMonth())));
+                .isEqualTo(Optional.of(LocalDate.of(EARLIEST_FUTURE_HEARING_DATE.getYear(),
+                        EARLIEST_FUTURE_HEARING_DATE.getMonthOfYear(),
+                        EARLIEST_FUTURE_HEARING_DATE.getDayOfMonth())));
     }
 
     @Test
     void getEarliestHearingDateWithEmptyHearingDatesCollection() {
         assertThat(initialConsiderationService.getEarliestHearingDateForListedHearings(new ArrayList<>()))
-            .isEmpty();
+                .isEmpty();
     }
 
     @Test
@@ -575,62 +586,62 @@ class InitialConsiderationServiceTest {
         String hearingDetails = initialConsiderationService.getHearingDetails(caseData.getHearingCollection(),
                 ENGLANDWALES_CASE_TYPE_ID);
         assertThat(hearingDetails)
-            .isEqualTo(EXPECTED_BLANK_HEARING_DETAILS);
+                .isEqualTo(EXPECTED_BLANK_HEARING_DETAILS);
     }
 
     @Test
     void generateJurisdictionCodesHtmlTest() {
         String jurisdictionCodesHtml =
-            initialConsiderationService.generateJurisdictionCodesHtml(generateJurisdictionCodes(),
-                ENGLANDWALES_CASE_TYPE_ID);
+                initialConsiderationService.generateJurisdictionCodesHtml(generateJurisdictionCodes(),
+                        ENGLANDWALES_CASE_TYPE_ID);
         assertThat(jurisdictionCodesHtml)
-            .isEqualTo(EXPECTED_JURISDICTION_HTML);
+                .isEqualTo(EXPECTED_JURISDICTION_HTML);
     }
 
     @Test
     void generateJurisdictionCodesHtmlScotlandTest() {
         String jurisdictionCodesHtml =
-            initialConsiderationService.generateJurisdictionCodesHtml(generateJurisdictionCodes(),
-                SCOTLAND_CASE_TYPE_ID);
+                initialConsiderationService.generateJurisdictionCodesHtml(generateJurisdictionCodes(),
+                        SCOTLAND_CASE_TYPE_ID);
         assertThat(jurisdictionCodesHtml)
-            .isEqualTo(EXPECTED_JURISDICTION_SCOTLAND_HTML);
+                .isEqualTo(EXPECTED_JURISDICTION_SCOTLAND_HTML);
     }
 
     @Test
     void missingHearingCollectionTest() {
         String expectedResult = """
-             <br/>
-             <table>
-             <thead>
-             <tr>
-             <th colspan="2"><h2>Listed Hearing Details</h2></th>
-             </tr>
-             <tr>
-             <th width="30%">Aspect</th>
-             <th width="70%">Detail</th>
-             </tr>
-             <thead>
-             <tbody>
-                <tr>
-                    <td>Date</td> <td> - </td>
-                </tr>
-                <tr>
-                    <td>Type</td> <td> - </td>
-                </tr>
-                <tr>
-                    <td>Duration</td> <td> - </td>
-                </tr>
-                <tr>
-                    <td>Hearing format</td> <td> - </td>
-                </tr>
-                <tr>
-                    <td>Panel Type</td> <td> - </td>
-                </tr>
-                <tr>
-                    <td>Venue</td> <td> - </td>
-                </tr>
-            </tbody>
-            </table>
+                 <br/>
+                 <table>
+                 <thead>
+                 <tr>
+                 <th colspan="2"><h2>Listed Hearing Details</h2></th>
+                 </tr>
+                 <tr>
+                 <th width="30%">Aspect</th>
+                 <th width="70%">Detail</th>
+                 </tr>
+                 <thead>
+                 <tbody>
+                    <tr>
+                        <td>Date</td> <td> - </td>
+                    </tr>
+                    <tr>
+                        <td>Type</td> <td> - </td>
+                    </tr>
+                    <tr>
+                        <td>Duration</td> <td> - </td>
+                    </tr>
+                    <tr>
+                        <td>Hearing format</td> <td> - </td>
+                    </tr>
+                    <tr>
+                        <td>Panel Type</td> <td> - </td>
+                    </tr>
+                    <tr>
+                        <td>Venue</td> <td> - </td>
+                    </tr>
+                </tbody>
+                </table>
                 """;
         String hearingDetails = initialConsiderationService.getHearingDetails(caseDataEmpty.getHearingCollection(),
                 ENGLANDWALES_CASE_TYPE_ID);
@@ -656,10 +667,10 @@ class InitialConsiderationServiceTest {
     @Test
     void invalidAndValidJurisdictionCollectionTest() {
         String jurisdictionCodesHtml =
-            initialConsiderationService.generateJurisdictionCodesHtml(generateValidInvalidJurisdictionCodes(),
-                ENGLANDWALES_CASE_TYPE_ID);
+                initialConsiderationService.generateJurisdictionCodesHtml(generateValidInvalidJurisdictionCodes(),
+                        ENGLANDWALES_CASE_TYPE_ID);
         assertThat(jurisdictionCodesHtml)
-            .isEqualTo(EXPECTED_JURISDICTION_HTML);
+                .isEqualTo(EXPECTED_JURISDICTION_HTML);
     }
 
     @Test
@@ -826,19 +837,19 @@ class InitialConsiderationServiceTest {
 
     private List<JurCodesTypeItem> generateJurisdictionCodes() {
         return List.of(generateJurisdictionCode("DAG"),
-            generateJurisdictionCode("SXD"));
+                generateJurisdictionCode("SXD"));
     }
 
     private List<JurCodesTypeItem> generateInvalidJurisdictionCodes() {
         return List.of(generateJurisdictionCode("PGA"),
-            generateJurisdictionCode("CGA"));
+                generateJurisdictionCode("CGA"));
     }
 
     private List<JurCodesTypeItem> generateValidInvalidJurisdictionCodes() {
         return List.of(generateJurisdictionCode("DAG"),
-            generateJurisdictionCode("SXD"),
-            generateJurisdictionCode("PGA"),
-            generateJurisdictionCode("CGA"));
+                generateJurisdictionCode("SXD"),
+                generateJurisdictionCode("PGA"),
+                generateJurisdictionCode("CGA"));
     }
 
     private JurCodesTypeItem generateJurisdictionCode(String codeString) {
@@ -851,28 +862,28 @@ class InitialConsiderationServiceTest {
 
     private CaseData generateCaseData(String fileName) throws URISyntaxException, IOException {
         String json = new String(Files.readAllBytes(Paths.get(Objects.requireNonNull(Thread.currentThread()
-            .getContextClassLoader().getResource(fileName)).toURI())));
+                .getContextClassLoader().getResource(fileName)).toURI())));
         ObjectMapper mapper = new ObjectMapper();
         return mapper.readValue(json, CaseData.class);
     }
 
     private List<DateListedTypeItem> generateHearingDates() {
         return List.of(createDate("2022-07-15T10:00:00.000", null),
-            createDate("2022-07-15T10:00:00.000", null),
-            createDate("2022-05-20T10:00:00.000", null),
-            createDate("2022-03-22T10:00:00.000", null),
-            createDate("2022-01-07T10:00:00.000", null),
-            createDate("2022-01-07T10:00:00.000", null),
-            createDate(EARLIEST_FUTURE_HEARING_DATE.toString(), "Listed"),
-            createDate(SECOND_FUTURE_HEARING_DATE.toString(), "Listed"));
+                createDate("2022-07-15T10:00:00.000", null),
+                createDate("2022-05-20T10:00:00.000", null),
+                createDate("2022-03-22T10:00:00.000", null),
+                createDate("2022-01-07T10:00:00.000", null),
+                createDate("2022-01-07T10:00:00.000", null),
+                createDate(EARLIEST_FUTURE_HEARING_DATE.toString(), "Listed"),
+                createDate(SECOND_FUTURE_HEARING_DATE.toString(), "Listed"));
     }
 
     private List<DateListedTypeItem> generateHearingDatesWithEmpty() {
         return List.of(createDate("2022-07-15T10:00:00.000", null),
-            createDate("2022-07-15T10:00:00.000", null),
-            new DateListedTypeItem(),
-            createDate("2022-03-22T10:00:00.000", null),
-            createDate(EARLIEST_FUTURE_HEARING_DATE.toString(), "Listed"));
+                createDate("2022-07-15T10:00:00.000", null),
+                new DateListedTypeItem(),
+                createDate("2022-03-22T10:00:00.000", null),
+                createDate(EARLIEST_FUTURE_HEARING_DATE.toString(), "Listed"));
     }
 
     private DateListedTypeItem createDate(String dateString, String status) {
@@ -931,11 +942,11 @@ class InitialConsiderationServiceTest {
                 null);
 
         String expected = """
-            |Claimant's hearing panel preference | |
-            |-------------|:------------|
-            |Panel Preference | -|
-            |Reason for Panel Preference | -|
-            """;
+                |Claimant's hearing panel preference | |
+                |-------------|:------------|
+                |Panel Preference | -|
+                |Reason for Panel Preference | -|
+                """;
         assertEquals(expected, result);
     }
 
@@ -1397,39 +1408,39 @@ class InitialConsiderationServiceTest {
         );
 
         String expectedResult = """
-           <br/>
-           <table>
-           <thead>
-           <tr>
-           <th colspan="2"><h2>Listed Hearing Details</h2></th>
-           </tr>
-           <tr>
-           <th width="30%">Aspect</th>
-           <th width="70%">Detail</th>
-           </tr>
-           <thead>
-           <tbody>
-              <tr>
-                  <td>Date</td> <td> - </td>
-              </tr>
-              <tr>
-                  <td>Type</td> <td> - </td>
-              </tr>
-              <tr>
-                  <td>Duration</td> <td> - </td>
-              </tr>
-              <tr>
-                  <td>Hearing format</td> <td> - </td>
-              </tr>
-              <tr>
-                  <td>Panel Type</td> <td> - </td>
-              </tr>
-              <tr>
-                  <td>Venue</td> <td> - </td>
-              </tr>
-          </tbody>
-          </table>
-            """;
+                 <br/>
+                 <table>
+                 <thead>
+                 <tr>
+                 <th colspan="2"><h2>Listed Hearing Details</h2></th>
+                 </tr>
+                 <tr>
+                 <th width="30%">Aspect</th>
+                 <th width="70%">Detail</th>
+                 </tr>
+                 <thead>
+                 <tbody>
+                    <tr>
+                        <td>Date</td> <td> - </td>
+                    </tr>
+                    <tr>
+                        <td>Type</td> <td> - </td>
+                    </tr>
+                    <tr>
+                        <td>Duration</td> <td> - </td>
+                    </tr>
+                    <tr>
+                        <td>Hearing format</td> <td> - </td>
+                    </tr>
+                    <tr>
+                        <td>Panel Type</td> <td> - </td>
+                    </tr>
+                    <tr>
+                        <td>Venue</td> <td> - </td>
+                    </tr>
+                </tbody>
+                </table>
+                """;
 
         String result = initialConsiderationService.getHearingDetails(hearingCollection, ENGLANDWALES_CASE_TYPE_ID);
         assertThat(result).isEqualTo(expectedResult);
@@ -1445,39 +1456,39 @@ class InitialConsiderationServiceTest {
         );
 
         String expectedResult = """
-           <br/>
-           <table>
-           <thead>
-           <tr>
-           <th colspan="2"><h2>Listed Hearing Details</h2></th>
-           </tr>
-           <tr>
-           <th width="30%">Aspect</th>
-           <th width="70%">Detail</th>
-           </tr>
-           <thead>
-           <tbody>
-              <tr>
-                  <td>Date</td> <td> 10 Oct 2026 </td>
-              </tr>
-              <tr>
-                  <td>Type</td> <td> Hearing Type 2 </td>
-              </tr>
-              <tr>
-                  <td>Duration</td> <td> 2 Hours </td>
-              </tr>
-              <tr>
-                  <td>Hearing format</td> <td> - </td>
-              </tr>
-              <tr>
-                  <td>Panel Type</td> <td> - </td>
-              </tr>
-              <tr>
-                  <td>Venue</td> <td> - </td>
-              </tr>
-          </tbody>
-          </table>
-            """;
+                 <br/>
+                 <table>
+                 <thead>
+                 <tr>
+                 <th colspan="2"><h2>Listed Hearing Details</h2></th>
+                 </tr>
+                 <tr>
+                 <th width="30%">Aspect</th>
+                 <th width="70%">Detail</th>
+                 </tr>
+                 <thead>
+                 <tbody>
+                    <tr>
+                        <td>Date</td> <td> 10 Oct 2026 </td>
+                    </tr>
+                    <tr>
+                        <td>Type</td> <td> Hearing Type 2 </td>
+                    </tr>
+                    <tr>
+                        <td>Duration</td> <td> 2 Hours </td>
+                    </tr>
+                    <tr>
+                        <td>Hearing format</td> <td> - </td>
+                    </tr>
+                    <tr>
+                        <td>Panel Type</td> <td> - </td>
+                    </tr>
+                    <tr>
+                        <td>Venue</td> <td> - </td>
+                    </tr>
+                </tbody>
+                </table>
+                """;
         String result = initialConsiderationService.getHearingDetails(hearingCollection, ENGLANDWALES_CASE_TYPE_ID);
         assertThat(result).isEqualTo(expectedResult);
     }
@@ -1580,21 +1591,6 @@ class InitialConsiderationServiceTest {
     }
 
     @Test
-    void getHearingVenueDetails_returnsVenueForScotland_whenVenueIsRecognized_Aberdeen() {
-        DynamicValueType dynamicValueType = new DynamicValueType();
-        dynamicValueType.setLabel("Aberdeen");
-        dynamicValueType.setCode("Aberdeen");
-        DynamicFixedListType dynamicFixedListType = new DynamicFixedListType();
-        dynamicFixedListType.setValue(dynamicValueType);
-        HearingType hearing = new HearingType();
-        hearing.setHearingAberdeen(dynamicFixedListType);
-        hearing.setHearingVenueScotland("Aberdeen");
-
-        String result = InitialConsiderationService.getHearingVenueDetails(hearing, SCOTLAND_CASE_TYPE_ID);
-        assertEquals("Aberdeen", result);
-    }
-
-    @Test
     void clearOldValues_clearsAllFieldsWhenAnswersExist() {
         EtICHearingListedAnswers answers = new EtICHearingListedAnswers();
         // Set all fields to non-null values
@@ -1619,51 +1615,6 @@ class InitialConsiderationServiceTest {
 
         EtICHearingListedAnswers cleared = caseDataWithFieldsToClear.getEtICHearingListedAnswers();
         assertNull(cleared);
-    }
-
-    @Test
-    void getHearingVenueDetails_returnsVenueForScotland_whenVenueIsRecognized_Dundee() {
-        DynamicFixedListType dynamicFixedListType = new DynamicFixedListType();
-        DynamicValueType dynamicValueType = new DynamicValueType();
-        dynamicValueType.setLabel("Dundee");
-        dynamicValueType.setCode("Dundee");
-        dynamicFixedListType.setValue(dynamicValueType);
-        HearingType hearing = new HearingType();
-        hearing.setHearingDundee(dynamicFixedListType);
-        hearing.setHearingVenueScotland("Dundee");
-
-        String result = InitialConsiderationService.getHearingVenueDetails(hearing, SCOTLAND_CASE_TYPE_ID);
-        assertEquals("Dundee", result);
-    }
-
-    @Test
-    void getHearingVenueDetails_returnsVenueForScotland_whenVenueIsRecognized_Edinburgh() {
-        DynamicFixedListType dynamicFixedListType = new DynamicFixedListType();
-        DynamicValueType dynamicValueType = new DynamicValueType();
-        dynamicValueType.setLabel("Edinburgh");
-        dynamicValueType.setCode("Edinburgh");
-        dynamicFixedListType.setValue(dynamicValueType);
-        HearingType hearing = new HearingType();
-        hearing.setHearingEdinburgh(dynamicFixedListType);
-        hearing.setHearingVenueScotland("Edinburgh");
-
-        String result = InitialConsiderationService.getHearingVenueDetails(hearing, SCOTLAND_CASE_TYPE_ID);
-        assertEquals("Edinburgh", result);
-    }
-
-    @Test
-    void getHearingVenueDetails_returnsVenueForScotland_whenVenueIsRecognized_Glasgow() {
-        DynamicFixedListType dynamicFixedListType = new DynamicFixedListType();
-        DynamicValueType dynamicValueType = new DynamicValueType();
-        dynamicValueType.setLabel("Glasgow");
-        dynamicValueType.setCode("Glasgow");
-        dynamicFixedListType.setValue(dynamicValueType);
-        HearingType hearing = new HearingType();
-        hearing.setHearingGlasgow(dynamicFixedListType);
-        hearing.setHearingVenueScotland("Glasgow");
-
-        String result = InitialConsiderationService.getHearingVenueDetails(hearing, SCOTLAND_CASE_TYPE_ID);
-        assertEquals("Glasgow", result);
     }
 
     @Test
@@ -1743,6 +1694,66 @@ class InitialConsiderationServiceTest {
     }
 
     @Test
+    void getHearingVenueDetails_returnsVenueForScotland_whenVenueIsRecognized_Aberdeen() {
+        DynamicValueType dynamicValueType = new DynamicValueType();
+        dynamicValueType.setLabel("Aberdeen");
+        dynamicValueType.setCode("Aberdeen");
+        DynamicFixedListType dynamicFixedListType = new DynamicFixedListType();
+        dynamicFixedListType.setValue(dynamicValueType);
+        HearingType hearing = new HearingType();
+        hearing.setHearingAberdeen(dynamicFixedListType);
+        hearing.setHearingVenueScotland("Aberdeen");
+
+        String result = InitialConsiderationService.getHearingVenueDetails(hearing, SCOTLAND_CASE_TYPE_ID);
+        assertEquals("Aberdeen", result);
+    }
+
+    @Test
+    void getHearingVenueDetails_returnsVenueForScotland_whenVenueIsRecognized_Dundee() {
+        DynamicFixedListType dynamicFixedListType = new DynamicFixedListType();
+        DynamicValueType dynamicValueType = new DynamicValueType();
+        dynamicValueType.setLabel("Dundee");
+        dynamicValueType.setCode("Dundee");
+        dynamicFixedListType.setValue(dynamicValueType);
+        HearingType hearing = new HearingType();
+        hearing.setHearingDundee(dynamicFixedListType);
+        hearing.setHearingVenueScotland("Dundee");
+
+        String result = InitialConsiderationService.getHearingVenueDetails(hearing, SCOTLAND_CASE_TYPE_ID);
+        assertEquals("Dundee", result);
+    }
+
+    @Test
+    void getHearingVenueDetails_returnsVenueForScotland_whenVenueIsRecognized_Edinburgh() {
+        DynamicFixedListType dynamicFixedListType = new DynamicFixedListType();
+        DynamicValueType dynamicValueType = new DynamicValueType();
+        dynamicValueType.setLabel("Edinburgh");
+        dynamicValueType.setCode("Edinburgh");
+        dynamicFixedListType.setValue(dynamicValueType);
+        HearingType hearing = new HearingType();
+        hearing.setHearingEdinburgh(dynamicFixedListType);
+        hearing.setHearingVenueScotland("Edinburgh");
+
+        String result = InitialConsiderationService.getHearingVenueDetails(hearing, SCOTLAND_CASE_TYPE_ID);
+        assertEquals("Edinburgh", result);
+    }
+
+    @Test
+    void getHearingVenueDetails_returnsVenueForScotland_whenVenueIsRecognized_Glasgow() {
+        DynamicFixedListType dynamicFixedListType = new DynamicFixedListType();
+        DynamicValueType dynamicValueType = new DynamicValueType();
+        dynamicValueType.setLabel("Glasgow");
+        dynamicValueType.setCode("Glasgow");
+        dynamicFixedListType.setValue(dynamicValueType);
+        HearingType hearing = new HearingType();
+        hearing.setHearingGlasgow(dynamicFixedListType);
+        hearing.setHearingVenueScotland("Glasgow");
+
+        String result = InitialConsiderationService.getHearingVenueDetails(hearing, SCOTLAND_CASE_TYPE_ID);
+        assertEquals("Glasgow", result);
+    }
+
+    @Test
     void getClaimantHearingPanelPreference_shouldReturnDashes_whenFieldsAreNull() {
         ClaimantHearingPreference pref = new ClaimantHearingPreference();
         String result = initialConsiderationService.getClaimantHearingPanelPreference("", pref);
@@ -1817,7 +1828,6 @@ class InitialConsiderationServiceTest {
 
         String result = initialConsiderationService.setIcEt3VettingIssuesDetailsForEachRespondent(
                 caseDataWithNullEt3Vetting);
-
         assertNotNull(result);
         assertTrue(result.contains("Details of ET3 Processing Issues"));
         assertFalse(result.contains("<h3>Respondent"));
@@ -1848,17 +1858,7 @@ class InitialConsiderationServiceTest {
         return caseDataWithValidRespondents;
     }
 
-    @Test
-    void setIcEt3VettingIssuesDetailsForEachRespondent_shouldHandleMultipleRespondents() {
-        RespondentSumType respondent1 = new RespondentSumType();
-        respondent1.setRespondentName("Respondent 1");
-        respondent1.setResponseRespondentName("Response 1");
-        Et3VettingType et3VettingType = new Et3VettingType();
-        et3VettingType.setEt3AdditionalInformation("Info 1");
-        respondent1.setEt3Vetting(et3VettingType);
-        RespondentSumTypeItem item1 = new RespondentSumTypeItem();
-        item1.setValue(respondent1);
-
+    private static @NonNull CaseData getCaseData(RespondentSumTypeItem item1) {
         RespondentSumType respondent2 = new RespondentSumType();
         respondent2.setRespondentName("Respondent 2");
         respondent2.setResponseRespondentName("Response 2");
@@ -1869,16 +1869,7 @@ class InitialConsiderationServiceTest {
         item2.setValue(respondent2);
         CaseData caseDataWithMultipleRespondents = new CaseData();
         caseDataWithMultipleRespondents.setRespondentCollection(List.of(item1, item2));
-
-        String result = initialConsiderationService.setIcEt3VettingIssuesDetailsForEachRespondent(
-                caseDataWithMultipleRespondents);
-
-        assertNotNull(result);
-        assertTrue(result.contains("Details of ET3 Processing Issues"));
-        assertTrue(result.contains("<h3>Respondent Respondent 1<h3>"));
-        assertTrue(result.contains("Info 1"));
-        assertTrue(result.contains("<h3>Respondent Respondent 2<h3>"));
-        assertTrue(result.contains("Info 2"));
+        return caseDataWithMultipleRespondents;
     }
 
     @Test
@@ -1890,7 +1881,7 @@ class InitialConsiderationServiceTest {
         initialConsiderationService.processEt3Response(et3Vetting, pairsList);
 
         assertEquals(1, pairsList.size());
-        assertEquals("Is there an ET3 response?", pairsList.get(0)[0]);
+        assertEquals("Is there an ET3 response?", pairsList.getFirst()[0]);
         assertEquals(YES, pairsList.getFirst()[1]);
     }
 
@@ -1903,7 +1894,6 @@ class InitialConsiderationServiceTest {
         List<String[]> pairsList = new ArrayList<>();
 
         initialConsiderationService.processEt3Response(et3Vetting, pairsList);
-
         assertEquals(3, pairsList.size());
         assertEquals("Is there an ET3 response?", pairsList.get(0)[0]);
         assertEquals(NO, pairsList.get(0)[1]);
@@ -1911,6 +1901,30 @@ class InitialConsiderationServiceTest {
         assertEquals("No response details", pairsList.get(1)[1]);
         assertEquals("General notes (No ET3 Response):", pairsList.get(2)[0]);
         assertEquals("General notes", pairsList.get(2)[1]);
+    }
+
+    @Test
+    void setIcEt3VettingIssuesDetailsForEachRespondent_shouldHandleMultipleRespondents() {
+        RespondentSumType respondent1 = new RespondentSumType();
+        respondent1.setRespondentName("Respondent 1");
+        respondent1.setResponseRespondentName("Response 1");
+        Et3VettingType et3VettingType = new Et3VettingType();
+        et3VettingType.setEt3AdditionalInformation("Info 1");
+        respondent1.setEt3Vetting(et3VettingType);
+        RespondentSumTypeItem item1 = new RespondentSumTypeItem();
+        item1.setValue(respondent1);
+
+        final CaseData caseDataWithMultipleRespondents = getCaseData(item1);
+
+        String result = initialConsiderationService.setIcEt3VettingIssuesDetailsForEachRespondent(
+                caseDataWithMultipleRespondents);
+
+        assertNotNull(result);
+        assertTrue(result.contains("Details of ET3 Processing Issues"));
+        assertTrue(result.contains("<h3>Respondent Respondent 1<h3>"));
+        assertTrue(result.contains("Info 1"));
+        assertTrue(result.contains("<h3>Respondent Respondent 2<h3>"));
+        assertTrue(result.contains("Info 2"));
     }
 
     @Test
@@ -1959,34 +1973,13 @@ class InitialConsiderationServiceTest {
         assertTrue(result.contains("Time points"));
     }
 
-    private static @NotNull Et3VettingType getEt3VettingType() {
-        Et3VettingType et3Vetting = new Et3VettingType();
-        et3Vetting.setEt3SuggestedIssues(List.of(
-                APPLICATIONS_FOR_STRIKE_OUT_OR_DEPOSIT,
-                INTERPRETERS,
-                JURISDICTIONAL_ISSUES,
-                RULE_49,
-                REQUEST_FOR_ADJUSTMENTS,
-                TIME_POINTS));
-        et3Vetting.setEt3SuggestedIssuesStrikeOut("Strike out details");
-        et3Vetting.setEt3SuggestedIssueInterpreters("Interpreters");
-        et3Vetting.setEt3SuggestedIssueJurisdictional("Jurisdictional issues");
-        et3Vetting.setEt3SuggestedIssueRule50("Rule 49");
-        et3Vetting.setEt3SuggestedIssueAdjustments("Request for adjustments");
-        et3Vetting.setEt3SuggestedIssueTimePoints("Time points");
-        return et3Vetting;
-    }
-
     @Test
     void setIcEt3VettingIssuesDetailsForEachRespondent_shouldIncludeRespondentNameDetails() {
         CaseData caseDataWithRespondentNameDetails = getData();
-
         InitialConsiderationService service = new InitialConsiderationService(tornadoService);
 
-        // Act
         String result = service.setIcEt3VettingIssuesDetailsForEachRespondent(caseDataWithRespondentNameDetails);
 
-        // Assert
         assertNotNull(result);
         assertTrue(result.contains("Do we have the respondent's name?"));
         assertTrue(result.contains("Does the respondent's name match?"));
@@ -2010,7 +2003,7 @@ class InitialConsiderationServiceTest {
         caseDataToReuse.setRespondentCollection(List.of(respondentItem));
         return caseDataToReuse;
     }
-    
+
     @Test
     void getIcRespondentHearingPanelPreference_shouldRenderDashes_whenFieldsAreNull() {
         RespondentSumType respondent = new RespondentSumType();
@@ -2034,14 +2027,6 @@ class InitialConsiderationServiceTest {
     }
 
     @Test
-    void getAdjustedHearingTypeName_shouldReturnInput_whenUnknownType() {
-        String input = "CustomType";
-        String result = InitialConsiderationService.getAdjustedHearingTypeName(input);
-
-        assertEquals(input, result);
-    }
-
-    @Test
     void getHearingVenueDetails_shouldReturnDash_whenHearingIsNull() {
         String result = InitialConsiderationService.getHearingVenueDetails(
                 null, ENGLANDWALES_CASE_TYPE_ID);
@@ -2049,82 +2034,89 @@ class InitialConsiderationServiceTest {
         assertEquals("-", result);
     }
 
-    @Test
-    void getHearingVenueDetails_shouldReturnDash_whenUnknownScotlandVenue() {
-        HearingType hearing = new HearingType();
-        hearing.setHearingVenueScotland("UnknownVenue");
-        String result = InitialConsiderationService.getHearingVenueDetails(hearing, SCOTLAND_CASE_TYPE_ID);
-
-        assertEquals("-", result);
+    private static @NotNull Et3VettingType getEt3VettingType() {
+        Et3VettingType et3Vetting = new Et3VettingType();
+        et3Vetting.setEt3SuggestedIssues(List.of(
+                APPLICATIONS_FOR_STRIKE_OUT_OR_DEPOSIT,
+                INTERPRETERS,
+                JURISDICTIONAL_ISSUES,
+                RULE_49,
+                REQUEST_FOR_ADJUSTMENTS,
+                TIME_POINTS));
+        et3Vetting.setEt3SuggestedIssuesStrikeOut("Strike out details");
+        et3Vetting.setEt3SuggestedIssueInterpreters("Interpreters");
+        et3Vetting.setEt3SuggestedIssueJurisdictional("Jurisdictional issues");
+        et3Vetting.setEt3SuggestedIssueRule50("Rule 49");
+        et3Vetting.setEt3SuggestedIssueAdjustments("Request for adjustments");
+        et3Vetting.setEt3SuggestedIssueTimePoints("Time points");
+        return et3Vetting;
     }
 
     @Test
-    void getHearingVenueDetails_shouldReturnDash_whenEnglandWalesVenueIsNull() {
-        HearingType hearing = new HearingType();
-        String result = InitialConsiderationService.getHearingVenueDetails(hearing, ENGLANDWALES_CASE_TYPE_ID);
+    void setPartiesHearingFormatDetails_shouldFormatWithClaimantAndRespondentDetails() {
+        InitialConsiderationService service = spy(new InitialConsiderationService(mock(TornadoService.class)));
+        CaseData caseDataWithClaimantAndRespondent = mock(CaseData.class);
 
-        assertEquals("-", result);
+        when(service.getClaimantHearingFormatDetails(caseDataWithClaimantAndRespondent))
+                .thenReturn("ClaimantDetails");
+        when(service.getRespondentHearingFormatDetails(caseDataWithClaimantAndRespondent))
+                .thenReturn("RespondentDetails");
+
+        String expected = String.format(PARTIES_HEARING_FORMAT, "ClaimantDetails", "RespondentDetails");
+        String actual = service.setPartiesHearingFormatDetails(caseDataWithClaimantAndRespondent);
+
+        assertEquals(expected, actual);
     }
 
     @Test
     void setHearingRegionAndVenue_shouldSetNulls_whenListsAreNull() {
-        CaseData caseData = new CaseData();
+        InitialConsiderationService service = spy(new InitialConsiderationService(mock(TornadoService.class)));
+        CaseData caseDataWithClaimantAndRespondent = mock(CaseData.class);
         initialConsiderationService.setHearingRegionAndVenue(caseData);
+        String expected = """
+                <br/>
+                <table>
+                  <thead>
+                  <tr>
+                    <th colspan="2"><h1>Parties Hearing Format Details</h1></th>
+                  </tr>
+                  <tr>
+                    <th colspan="2"><h2>Claimant Hearing Format</h2></th>
+                  </tr>
+                  <tr>
+                    <th width="30%">Claimant</th>
+                    <th width="70%">Hearing Format</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr>
+                    <td>null</td>
+                    <td>-</td>
+                  </tr>
+                
+                </tbody>
+                </table>
+                
+                <table>
+                 <thead>
+                    <tr>
+                      <th colspan="2"><h2>Respondents Hearing Format</h2></th>
+                    </tr>
+                    <tr>
+                      <th width="30%"><h3>Respondent</h3></th>
+                      <th width="70%"><span class="bold">Hearing Format</span></th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+                </table>
+                
+                """;
+        String actual = service.setPartiesHearingFormatDetails(caseDataWithClaimantAndRespondent);
 
         assertNull(caseData.getRegionalOffice());
         assertNull(caseData.getEt1TribunalRegion());
-    }
-
-    @Test
-    void setIcEt3VettingIssuesDetailsForEachRespondent_shouldIncludeResponseInTimeDetails_whenResponseIsNotInTime() {
-        CaseData caseDataWithNoResponseInTime = getCaseData1();
-        InitialConsiderationService service = new InitialConsiderationService(tornadoService);
-        String result = service.setIcEt3VettingIssuesDetailsForEachRespondent(caseDataWithNoResponseInTime);
-
-        assertNotNull(result);
-        assertTrue(result.contains("Did we receive the ET3 response in time?"));
-        assertTrue(result.contains(NO));
-        assertTrue(result.contains("Received late due to postal delay"));
-    }
-
-    private static @NotNull CaseData getCaseData1() {
-        Et3VettingType et3Vetting = new Et3VettingType();
-        et3Vetting.setEt3ResponseInTime(NO);
-        et3Vetting.setEt3ResponseInTimeDetails("Received late due to postal delay");
-        RespondentSumType respondent = new RespondentSumType();
-        respondent.setRespondentName("Late Respondent");
-        respondent.setEt3Vetting(et3Vetting);
-        RespondentSumTypeItem respondentItem = new RespondentSumTypeItem();
-        respondentItem.setValue(respondent);
-        CaseData caseDataOne = new CaseData();
-        caseDataOne.setRespondentCollection(List.of(respondentItem));
-        return caseDataOne;
-    }
-
-    @Test
-    void setIcEt3VettingIssuesDetailsForEachRespondent_shouldNotIncludeReasonDetails_whenResponseIsInTime() {
-        Et3VettingType et3Vetting = new Et3VettingType();
-        et3Vetting.setEt3ResponseInTime(YES);
-        RespondentSumType respondent = new RespondentSumType();
-        respondent.setRespondentName("On Time Respondent");
-        et3Vetting.setEt3ResponseInTimeDetails("Some test reason for not having ET3 in time");
-        respondent.setEt3Vetting(et3Vetting);
-        RespondentSumTypeItem respondentItem = new RespondentSumTypeItem();
-        respondentItem.setValue(respondent);
-        CaseData caseDataWithEt3Details = new CaseData();
-        caseDataWithEt3Details.setRespondentCollection(List.of(respondentItem));
-
-        InitialConsiderationService service = new InitialConsiderationService(tornadoService);
-        String result = service.setIcEt3VettingIssuesDetailsForEachRespondent(caseDataWithEt3Details);
-
-        assertNotNull(result);
-        assertFalse(result.contains("Some test reason for not having ET3 in time"));
-    }
-
-    @Test
-    void getHearingVenueDetails_returnsDashForNullHearing() {
-        String result = InitialConsiderationService.getHearingVenueDetails(null, ENGLANDWALES_CASE_TYPE_ID);
-        assertEquals("-", result);
+        assertThat(actual).isEqualToNormalizingWhitespace(expected);
     }
 
     @Test
@@ -2138,5 +2130,412 @@ class InitialConsiderationServiceTest {
         assertTrue(result.contains("Is this location correct?"));
         assertFalse(result.contains("Local or regional office selected"));
         assertFalse(result.contains("Why should we change the office?"));
+    }
+
+    @Test
+    void setPartiesHearingFormatDetails_shouldHandleNullClaimantAndRespondentDetails() {
+        InitialConsiderationService service = spy(new InitialConsiderationService(mock(TornadoService.class)));
+        CaseData caseDataWithNullClaimant = mock(CaseData.class);
+
+        when(service.getClaimantHearingFormatDetails(caseDataWithNullClaimant)).thenReturn(null);
+        when(service.getRespondentHearingFormatDetails(caseDataWithNullClaimant)).thenReturn(null);
+
+        String expected = String.format(PARTIES_HEARING_FORMAT, null, null);
+        String actual = service.setPartiesHearingFormatDetails(caseDataWithNullClaimant);
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void getRespondentHearingFormatDetails_shouldIncludeRespondentHearingFormatPreference() {
+        // Respondent with non-null, non-empty Et3ResponseHearingRespondent
+        RespondentSumType respondent = new RespondentSumType();
+        respondent.setRespondentName("Resp1");
+        List<String> hearingPrefs = List.of("Video", "Phone");
+        respondent.setEt3ResponseHearingRespondent(hearingPrefs);
+        RespondentSumTypeItem respondentItem = new RespondentSumTypeItem();
+        respondentItem.setValue(respondent);
+        CaseData caseDataWithRespondentHearingFormat = new CaseData();
+        caseDataWithRespondentHearingFormat.setRespondentCollection(List.of(respondentItem));
+        String result = initialConsiderationService.getRespondentHearingFormatDetails(
+                caseDataWithRespondentHearingFormat);
+        assertThat(result).contains("Resp1");
+        assertThat(result).contains("Video, Phone");
+    }
+
+    @Test
+    void getRespondentHearingFormatDetails_shouldSkipWhenEt3ResponseHearingRespondentIsNullOrEmpty() {
+        // Respondent with null Et3ResponseHearingRespondent
+        RespondentSumType respondent = new RespondentSumType();
+        respondent.setRespondentName("Resp2");
+        respondent.setEt3ResponseHearingRespondent(null);
+        RespondentSumTypeItem respondentItem = new RespondentSumTypeItem();
+        respondentItem.setValue(respondent);
+        CaseData caseDataWithNoEt3Respondent = new CaseData();
+        caseDataWithNoEt3Respondent.setRespondentCollection(List.of(respondentItem));
+        String result = initialConsiderationService.getRespondentHearingFormatDetails(caseDataWithNoEt3Respondent);
+        // Should not contain respondent name or preference row
+        assertThat(result).doesNotContain("Resp2");
+    }
+
+    @Test
+    void getRespondentHearingFormatDetails_shouldIncludeRepHearingFormatPreference() {
+        // RepCollection with a matching rep and non-null Et3ResponseHearingRepresentative
+        RespondentSumType respondent = new RespondentSumType();
+        respondent.setRespondentName("Resp3");
+        List<String> repPrefs = List.of("In person");
+        respondent.setEt3ResponseHearingRepresentative(repPrefs);
+        RespondentSumTypeItem respondentItem = new RespondentSumTypeItem();
+        respondentItem.setValue(respondent);
+        RepresentedTypeRItem repItem = new RepresentedTypeRItem();
+        RepresentedTypeR rep = new RepresentedTypeR();
+        rep.setRespRepName("Resp3");
+        rep.setNameOfRepresentative("RepName");
+        repItem.setValue(rep);
+        CaseData caseDataWithRepHearing = new CaseData();
+        caseDataWithRepHearing.setRespondentCollection(List.of(respondentItem));
+        caseDataWithRepHearing.setRepCollection(List.of(repItem));
+        String result = initialConsiderationService.getRespondentHearingFormatDetails(caseDataWithRepHearing);
+        assertThat(result).contains("RepName");
+        assertThat(result).contains("In person");
+    }
+
+    @Test
+    void getRespondentHearingFormatDetails_shouldSkipRepRowIfNoMatchingRepOrNullRepPrefs() {
+        // RepCollection with no matching rep
+        RespondentSumType respondent = new RespondentSumType();
+        respondent.setRespondentName("Resp4");
+        respondent.setEt3ResponseHearingRepresentative(List.of("Video"));
+        RespondentSumTypeItem respondentItem = new RespondentSumTypeItem();
+        respondentItem.setValue(respondent);
+        RepresentedTypeRItem repItem = new RepresentedTypeRItem();
+        RepresentedTypeR rep = new RepresentedTypeR();
+        rep.setRespRepName("OtherResp");
+        rep.setNameOfRepresentative("OtherRep");
+        repItem.setValue(rep);
+        CaseData caseDataWithNoMatchingRep = new CaseData();
+        caseDataWithNoMatchingRep.setRespondentCollection(List.of(respondentItem));
+        caseDataWithNoMatchingRep.setRepCollection(List.of(repItem));
+        String result = initialConsiderationService.getRespondentHearingFormatDetails(caseDataWithNoMatchingRep);
+        // Should not contain OtherRep
+        assertThat(result).doesNotContain("OtherRep");
+        // Now test with null Et3ResponseHearingRepresentative
+        respondent.setEt3ResponseHearingRepresentative(null);
+        rep.setRespRepName("Resp4"); // Now matches
+        String result2 = initialConsiderationService.getRespondentHearingFormatDetails(caseDataWithNoMatchingRep);
+        // Should not contain rep row
+        assertThat(result2).doesNotContain("Resp4");
+    }
+
+    @Test
+    void composeIcEt1OtherReferralListDetails_shouldReturnCorrectDetailsForEachReferralReason() {
+        CaseData caseDataWithOtherReferrals = new CaseData();
+        caseDataWithOtherReferrals.setOtherReferralList(Arrays.asList(
+                "claimOutOfTime", "multipleClaim", "employmentStatusIssues", "pidJurisdictionRegulator",
+                "videoHearingPreference", "rule50IssuesOtherFactors", "otherRelevantFactors", "unknown"
+        ));
+        caseDataWithOtherReferrals.setClaimOutOfTimeTextArea("out of time details");
+        caseDataWithOtherReferrals.setMultipleClaimTextArea("multiple claim details");
+        caseDataWithOtherReferrals.setEmploymentStatusIssuesTextArea("employment status details");
+        caseDataWithOtherReferrals.setPidJurisdictionRegulatorTextArea("pid jurisdiction details");
+        caseDataWithOtherReferrals.setVideoHearingPreferenceTextArea("video hearing details");
+        caseDataWithOtherReferrals.setRule50IssuesForOtherReferralTextArea("rule 49 details");
+        caseDataWithOtherReferrals.setAnotherReasonForOtherReferralTextArea("other relevant details");
+
+        String result = initialConsiderationService.setIcEt1VettingIssuesDetails(caseDataWithOtherReferrals);
+
+        assertTrue(result.contains("Claim out of time"));
+        assertTrue(result.contains("Multiple claim"));
+        assertTrue(result.contains("employment status details"));
+        assertTrue(result.contains("video hearing details"));
+        assertTrue(result.contains("rule 49 details"));
+    }
+
+    @Test
+    void composeIcEt1ReferralToJudgeOrLOListWithDetails_shouldReturnCorrectDetailsForEachReferralReason() {
+        CaseData caseDataWithReferralReasons = new CaseData();
+        List<String> referralList = Arrays.asList(
+                "aClaimOfInterimRelief",
+                "aStatutoryAppeal",
+                "anAllegationOfCommissionOfSexualOffence",
+                "insolvency",
+                "jurisdictionsUnclear",
+                "lengthOfService",
+                "potentiallyLinkedCasesInTheEcm",
+                "rule50Issues",
+                "anotherReasonForJudicialReferral"
+        );
+        caseDataWithReferralReasons.setReferralToJudgeOrLOList(referralList);
+        caseDataWithReferralReasons.setAclaimOfInterimReliefTextArea("Interim relief details");
+        caseDataWithReferralReasons.setAstatutoryAppealTextArea("Statutory appeal details");
+        caseDataWithReferralReasons.setAnAllegationOfCommissionOfSexualOffenceTextArea("Sexual offence details");
+        caseDataWithReferralReasons.setInsolvencyTextArea("Insolvency details");
+        caseDataWithReferralReasons.setJurisdictionsUnclearTextArea("Jurisdictions unclear details");
+        caseDataWithReferralReasons.setLengthOfServiceTextArea("Length of service details");
+        caseDataWithReferralReasons.setPotentiallyLinkedCasesInTheEcmTextArea("Linked cases details");
+        caseDataWithReferralReasons.setRule50IssuesTextArea("Rule 49 issues details");
+        caseDataWithReferralReasons.setAnotherReasonForJudicialReferralTextArea("Other judicial referral details");
+
+        String result = initialConsiderationService.setIcEt1VettingIssuesDetails(caseDataWithReferralReasons);
+
+        assertTrue(result.contains("A claim of interim relief"));
+        assertTrue(result.contains("A statutory appeal"));
+        assertTrue(result.contains("Length of service details"));
+    }
+
+    @Test
+    void setIcEt1VettingIssuesDetails_shouldIncludeAllSubstantiveDefects() {
+        final CaseData caseDataWithSubstantiveDefects = getCaseDataWithSubstantiveDefects();
+
+        String result = initialConsiderationService.setIcEt1VettingIssuesDetails(caseDataWithSubstantiveDefects);
+
+        assertTrue(result.contains("The tribunal has no jurisdiction to consider - Rule 13(1)(a)|Defect A text|"));
+        assertTrue(result.contains("Is in a form which cannot sensibly be responded to or otherwise an abuse of "
+                + "process - Rule 13(1)(b)|Defect B text|"));
+        assertTrue(result.contains("Has neither an EC number nor claims one of the EC exemptions - Rule 13(1)(c)"));
+        assertTrue(result.contains("States that one of the EC exceptions applies but it might not - Rule 13(1)(d)"));
+        assertTrue(result.contains("Institutes relevant proceedings and the EC number on the claim form does not "
+                + "match the EC number on the Acas certificate - Rule 13(1)(e)"));
+        assertTrue(result.contains("Has a different claimant name on the ET1 to the claimant name on the Acas "
+                + "certificate - Rule 13(1)(f)"));
+    }
+
+    private static @NonNull CaseData getCaseDataWithSubstantiveDefects() {
+        CaseData caseDataWithSubstantiveDefects = new CaseData();
+        caseDataWithSubstantiveDefects.setSubstantiveDefectsList(List.of(
+                "rule121a", "rule121b", "rule121c", "rule121d", "rule121 da", "rule121e", "rule121f"
+        ));
+        caseDataWithSubstantiveDefects.setRule121aTextArea("Defect A text");
+        caseDataWithSubstantiveDefects.setRule121bTextArea("Defect B text");
+        caseDataWithSubstantiveDefects.setRule121cTextArea("C");
+        caseDataWithSubstantiveDefects.setRule121dTextArea("D");
+        caseDataWithSubstantiveDefects.setRule121daTextArea("DA");
+        caseDataWithSubstantiveDefects.setRule121eTextArea("E");
+        caseDataWithSubstantiveDefects.setRule121fTextArea("F");
+        return caseDataWithSubstantiveDefects;
+    }
+
+    @Test
+    void setIcEt1VettingIssuesDetails_shouldIncludeReferralToJudgeOrLO_whenReferralListIsPopulated() {
+        CaseData caseDataWithReferralToJudgeOrLO = new CaseData();
+        caseDataWithReferralToJudgeOrLO.setReferralToJudgeOrLOList(
+                List.of("aClaimOfInterimRelief", "aStatutoryAppeal"));
+        caseDataWithReferralToJudgeOrLO.setAclaimOfInterimReliefTextArea("Interim relief details");
+        caseDataWithReferralToJudgeOrLO.setAstatutoryAppealTextArea("Statutory appeal details");
+        String result = initialConsiderationService.setIcEt1VettingIssuesDetails(caseDataWithReferralToJudgeOrLO);
+
+        assertNotNull(result);
+        assertTrue(result.contains("A claim of interim relief"));
+        assertTrue(result.contains("Interim relief details"));
+        assertTrue(result.contains("A statutory appeal"));
+        assertTrue(result.contains("Statutory appeal details"));
+    }
+
+    @Test
+    void composeTrackAllocationDetails_shouldReturnEmptyList_whenCaseDataIsNull() {
+        List<List<String>> result = initialConsiderationService.composeTrackAllocationDetails(null);
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    void composeTrackAllocationDetails_shouldReturnEmptyList_whenIsTrackAllocationCorrectIsNull() {
+        List<List<String>> result = initialConsiderationService.composeTrackAllocationDetails(new CaseData());
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    void composeTrackAllocationDetails_shouldReturnEmptyList_whenIsTrackAllocationCorrectIsYes() {
+        CaseData caseDataWithCorrectTrackAllocation = new CaseData();
+        caseDataWithCorrectTrackAllocation.setIsTrackAllocationCorrect("Yes");
+        List<List<String>> result = initialConsiderationService.composeTrackAllocationDetails(
+                caseDataWithCorrectTrackAllocation);
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    void composeTrackAllocationDetails_shouldReturnEmptyList_whenIsTrackAllocationCorrectIsNo() {
+        CaseData caseDataWithInCorrectTrackAllocation = new CaseData();
+        caseDataWithInCorrectTrackAllocation.setIsTrackAllocationCorrect("No");
+        caseDataWithInCorrectTrackAllocation.setSuggestAnotherTrack("Suggested track details");
+        List<List<String>> result = initialConsiderationService.composeTrackAllocationDetails(
+                caseDataWithInCorrectTrackAllocation);
+        assertNotNull(result);
+        assertTrue(result.getFirst().contains("Is the track allocation correct?"));
+        assertTrue(result.get(1).contains("Suggested track details"));
+    }
+
+    @Test
+    void composeTrackAllocationTableMarkUp_shouldAppendDetails_whenTrackAllocationIssuesExist() {
+        CaseData caseDataWithTrackAllocationIssues = mock(CaseData.class);
+        when(caseDataWithTrackAllocationIssues.getIsTrackAllocationCorrect()).thenReturn("No");
+        when(caseDataWithTrackAllocationIssues.getSuggestAnotherTrack()).thenReturn("Suggested track details");
+        // Indirectly test via public API
+        String result = initialConsiderationService.setIcEt1VettingIssuesDetails(caseDataWithTrackAllocationIssues);
+
+        assertTrue(result.contains("Details of Track Allocation Issue"));
+        assertTrue(result.contains("Suggested track details"));
+    }
+
+    @Test
+    void composeServingClaimsTableMarkUp_shouldAppendTable_whenClaimCannotBeServed() {
+        CaseData caseDataWithNoClaimToBeServe = new CaseData();
+        caseDataWithNoClaimToBeServe.setEt1VettingCanServeClaimYesOrNo("No");
+        caseDataWithNoClaimToBeServe.setEt1VettingCanServeClaimNoReason("Incorrect address");
+        caseDataWithNoClaimToBeServe.setEt1VettingCanServeClaimGeneralNote("Check claimant details");
+        InitialConsiderationService service = new InitialConsiderationService(mock(TornadoService.class));
+        service.setIcEt1VettingIssuesDetails(caseDataWithNoClaimToBeServe);
+        String result = service.setIcEt1VettingIssuesDetails(caseDataWithNoClaimToBeServe);
+
+        assertTrue(result.contains("Serving Claim Issue"));
+        assertTrue(result.contains("Reason for not serving"));
+        assertTrue(result.contains("General Note (Serve Claim)"));
+        assertTrue(result.contains("Incorrect address"));
+        assertTrue(result.contains("Check claimant details"));
+    }
+
+    @Test
+    void composeServingClaimsTableMarkUp_shouldAppendTable_whenClaimCanBeServed() {
+        InitialConsiderationService service = new InitialConsiderationService(mock(TornadoService.class));
+        CaseData caseDataWithClaimToBeServe = new CaseData();
+        caseDataWithClaimToBeServe.setEt1VettingCanServeClaimYesOrNo("Yes");
+
+        String result = service.setIcEt1VettingIssuesDetails(caseDataWithClaimToBeServe);
+
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    void setIcEt1VettingIssuesDetails_shouldIncludeReferralToREJOrVP_whenReferralListIsPopulated() {
+        final CaseData caseDataWithReferralsToREJOrVP = getCaseDataWithReferralsToREJOrVP();
+        String result = initialConsiderationService.setIcEt1VettingIssuesDetails(caseDataWithReferralsToREJOrVP);
+        assertNotNull(result);
+        assertTrue(result.contains("Details of Referral To REJ or VP"));
+        assertTrue(result.contains("A claimant covered by vexatious litigant order"));
+        assertTrue(result.contains("Vexatious details"));
+        assertTrue(result.contains("A national security issue"));
+        assertTrue(result.contains("National security details"));
+        assertTrue(result.contains("A part of national multiple / covered by Presidential case management order"));
+        assertTrue(result.contains("Presidential order details"));
+        assertTrue(result.contains("A request for transfer to another ET region"));
+        assertTrue(result.contains("Transfer details"));
+    }
+
+    private static @NonNull CaseData getCaseDataWithReferralsToREJOrVP() {
+        CaseData caseDataWithReferralsToREJOrVP = new CaseData();
+        caseDataWithReferralsToREJOrVP.setReferralToREJOrVPList(List.of(
+                "vexatiousLitigantOrder",
+                "aNationalSecurityIssue",
+                "nationalMultipleOrPresidentialOrder",
+                "transferToOtherRegion",
+                "serviceAbroad",
+                "aSensitiveIssue",
+                "anyPotentialConflict"
+        ));
+        caseDataWithReferralsToREJOrVP.setVexatiousLitigantOrderTextArea("Vexatious details");
+        caseDataWithReferralsToREJOrVP.setAnationalSecurityIssueTextArea("National security details");
+        caseDataWithReferralsToREJOrVP.setNationalMultipleOrPresidentialOrderTextArea("Presidential order details");
+        caseDataWithReferralsToREJOrVP.setTransferToOtherRegionTextArea("Transfer details");
+        caseDataWithReferralsToREJOrVP.setServiceAbroadTextArea("Service abroad details");
+        caseDataWithReferralsToREJOrVP.setAsensitiveIssueTextArea("Sensitive issue details");
+        caseDataWithReferralsToREJOrVP.setAnyPotentialConflictTextArea("Conflict details");
+        return caseDataWithReferralsToREJOrVP;
+    }
+
+    @Test
+    void setEt1VettingAndEt3ProcessingDetails_shouldSetEt1AndEt3Details_whenCaseTypeIsEnglandWales() {
+        CaseData caseDataWithEt1AndEt3Details = new CaseData();
+        RespondentSumTypeItem respondentSumTypeItem = new RespondentSumTypeItem();
+        RespondentSumType respondentSumType = new RespondentSumType();
+        respondentSumTypeItem.setValue(respondentSumType);
+        respondentSumTypeItem.getValue().setEt3Vetting(new Et3VettingType());
+        caseDataWithEt1AndEt3Details.setRespondentCollection(List.of(respondentSumTypeItem));
+        initialConsiderationService.setEt1VettingAndEt3ProcessingDetails(
+                    caseDataWithEt1AndEt3Details, ENGLANDWALES_CASE_TYPE_ID);
+
+        assertNotNull(caseDataWithEt1AndEt3Details.getIcEt1VettingIssuesDetail());
+        assertNotNull(caseDataWithEt1AndEt3Details.getIcEt3ProcessingIssuesDetail());
+    }
+
+    @Test
+    void setEt1VettingAndEt3ProcessingDetails_shouldSetEt1AndEt3Details_whenCaseTypeIsScotland() {
+        CaseData caseDataWithEt1AndEt3Details = new CaseData();
+        RespondentSumTypeItem respondentSumTypeItem = new RespondentSumTypeItem();
+        RespondentSumType respondentSumType = new RespondentSumType();
+        respondentSumTypeItem.setValue(respondentSumType);
+        respondentSumTypeItem.getValue().setEt3Vetting(new Et3VettingType());
+        caseDataWithEt1AndEt3Details.setRespondentCollection(List.of(respondentSumTypeItem));
+        initialConsiderationService.setEt1VettingAndEt3ProcessingDetails(
+                caseDataWithEt1AndEt3Details, SCOTLAND_CASE_TYPE_ID);
+
+        assertNull(caseDataWithEt1AndEt3Details.getIcEt1VettingIssuesDetail());
+        assertNull(caseDataWithEt1AndEt3Details.getIcEt3ProcessingIssuesDetail());
+    }
+
+    @Test
+    void clearOldValues_shouldClearEtICHearingListedAnswers_whenAnswersExist() {
+        CaseData caseDataWithHearingListedAnswers = new CaseData();
+        // Mock EtICHearingListedAnswers to be non-null
+        EtICHearingListedAnswers answers = mock(EtICHearingListedAnswers.class);
+        caseDataWithHearingListedAnswers.setEtICHearingListedAnswers(answers);
+
+        InitialConsiderationService service = new InitialConsiderationService(mock(TornadoService.class));
+        service.clearOldValues(caseDataWithHearingListedAnswers);
+
+        // Add assertions relevant to the clearing logic, e.g. verify fields are cleared
+        // Example: verify(answers).clearSomeField(); // Replace with actual clearing logic
+        assertNull(caseDataWithHearingListedAnswers.getEtICHearingListedAnswers());
+    }
+
+    @Test
+    void shouldNotAppendAnythingIfEt1SuggestHearingVenueIsNull() {
+        CaseData caseDataWithEt1SuggestedHearingVenue = new CaseData();
+        caseDataWithEt1SuggestedHearingVenue.setEt1SuggestHearingVenue(null);
+        DynamicFixedListType dynamicFixedListType = new DynamicFixedListType();
+        DynamicValueType dynamicValueType = new DynamicValueType();
+        dynamicValueType.setCode("Venue1");
+        dynamicValueType.setLabel("Venue1");
+        dynamicFixedListType.setValue(dynamicValueType);
+        dynamicFixedListType.setListItems(List.of(dynamicValueType));
+        caseDataWithEt1SuggestedHearingVenue.setEt1HearingVenues(dynamicFixedListType);
+
+        InitialConsiderationService service = new InitialConsiderationService(mock(TornadoService.class));
+        String result = service.setIcEt1VettingIssuesDetails(caseDataWithEt1SuggestedHearingVenue);
+        assertEquals("", result);
+    }
+
+    @Test
+    void shouldNotAppendAnythingIfEt1SuggestHearingVenueIsNotNull() {
+        CaseData caseDataWithEt1SuggestedHearingVenue = new CaseData();
+        caseDataWithEt1SuggestedHearingVenue.setEt1SuggestHearingVenue("Yes");
+        DynamicFixedListType dynamicFixedListType = new DynamicFixedListType();
+        DynamicValueType dynamicValueType = new DynamicValueType();
+        dynamicValueType.setCode("Venue1");
+        dynamicValueType.setLabel("Venue1");
+        dynamicFixedListType.setValue(dynamicValueType);
+        dynamicFixedListType.setListItems(List.of(dynamicValueType));
+        caseDataWithEt1SuggestedHearingVenue.setEt1HearingVenues(dynamicFixedListType);
+
+        InitialConsiderationService service = new InitialConsiderationService(mock(TornadoService.class));
+        String result = service.setIcEt1VettingIssuesDetails(caseDataWithEt1SuggestedHearingVenue);
+        assertTrue(result.contains("Venue1"));
+    }
+
+    @Test
+    void shouldNotAppendAnythingIfEt1SuggestHearingVenueIsNotYes() {
+        CaseData caseDataWithNoEt1SuggestedHearingVenue = new CaseData();
+        caseDataWithNoEt1SuggestedHearingVenue.setEt1SuggestHearingVenue("No");
+        DynamicFixedListType dynamicFixedListType = new DynamicFixedListType();
+        DynamicValueType dynamicValueType = new DynamicValueType();
+        dynamicValueType.setCode("Venue1");
+        dynamicValueType.setLabel("Venue1");
+        dynamicFixedListType.setValue(dynamicValueType);
+        dynamicFixedListType.setListItems(List.of(dynamicValueType));
+        caseDataWithNoEt1SuggestedHearingVenue.setEt1HearingVenues(dynamicFixedListType);
+        InitialConsiderationService service = new InitialConsiderationService(mock(TornadoService.class));
+        String result = service.setIcEt1VettingIssuesDetails(caseDataWithNoEt1SuggestedHearingVenue);
+
+        assertEquals("", result);
     }
 }
